--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13158575.md#1" title="【时事纵横】习将续任5年？胡锡进惹怒国际""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13158681-6f11b72631438f681843cf98dec09c25-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13158217.md#1" title="【一线采访】成都新津霸凌事件引民愤""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13158495-baling-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/vbtdby377/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vbtdby377.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161068.md#1">美中能否在竞争同时进行合作 专家分析</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161107.md#1">美国驻阿富汗大使馆通知员工销毁敏感资料</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161101.md#1">【预告】专访王维洛：海绵城市是伪命题（2）</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13160165.md#1">2021上半年 大庆法轮功学员遭迫害概述</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161016.md#1">美国这8州染疫住院人数占全国一半</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/14/n13161085.md#1">为墨西哥毒枭“换汇” 华人洗钱组织牢狱之路</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161068.md#1">美中能否在竞争同时进行合作 专家分析</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161107.md#1">美国驻阿富汗大使馆通知员工销毁敏感资料</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13161101.md#1">【预告】专访王维洛：海绵城市是伪命题（2）</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13160165.md#1">2021上半年 大庆法轮功学员遭迫害概述</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13156436.md#1">中共将严审卡拉OK曲目 引来网民嘲讽</a><br>
 <a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13156408.md#1">北京多名官员职位有变 人事布局引关注</a><br>
@@ -94,12 +94,12 @@
 <a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/10/n13152819.md#1">孟晚舟案庭审之际 中共维持加国男子死刑判决</a><br>
 <a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13149851.md#1">看中共铁窗下精英们的苦难（8）</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 46,673</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://123.204.158.203/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 46,673</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 381,909,551 人
+!共 381,909,670 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161068.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13142357-GettyImages-1178993487-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161068.md#1">美中能否在竞争同时进行合作 专家分析</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161103-GettyImages-484755619-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1">万隆辞任万洲国际行政总裁 子女继承成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160027.md#1">大陆百亿级房企债券违约 触发交叉违约条款</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159542.md#1">传大陆“华尔街英语”将宣布破产</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157718.md#1">海运现塞港危机 中国舟山港因疫情封港</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160407-ccp-protest-700x420-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1">【名家专栏】中国人想要美好未来 中共需下台</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160836.md#1">捍卫台湾 美采用“切香肠”战术反制中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160562.md#1">大陆富豪启示录 专家：起落从不由己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160213.md#1">中共再炒“美军投毒论” 美国防部：没有证据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160055.md#1">回顾飞虎队成立80周年 两岸谁有话语权？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159904.md#1">美日印澳安全对话 强调台海和平安全重要性</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159795.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159805-GettyImages-1234616079-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159728.md#1">四川多地强迫打疫苗 官员敛财 有人打第三针</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156646.md#1">南京市ICU病房护士确诊染疫</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/5d008ca41d9b9810bd5f7992c35d4cf5-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1">中共推法治政府建设路线图？网友公开抨击</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160436.md#1">中国长期物化女性 外媒：有毒文化根深蒂固</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160050.md#1">国台酒业女员工被性侵一个月后公司才回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159632.md#1">组图：武汉疫情持续扩散 中风险区范围扩大</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158404.md#1">张智霖打算退出演艺圈？袁咏仪霸气回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/06/20160616_gaokao-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1">北京严厉打击课外培训 令昂贵家教转入地下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/10/n13153422.md#1">奥运场外大陆高涨的“民族主义”情绪</a><br>
